--- a/Changes.txt
+++ b/Changes.txt
@@ -1,5 +1,11 @@
 Canvas Snippets - ChangeLog
 
-v1.2.0
-1.Added a new feature to 
-2.Added CanvasSnippet CheatSheet File to the Command Pallet and can be accesed by typing 'CheatSheet' in the Command Pallet
+v1.1.3
+1.CheatSheet file is now added to the Command Pallet and can be accessed by typing CanvasSnippets in the Command Pallet
+2.Organized all Snippets in Folders and added a snippet_map.txt to easily identify where a snippet file is.
+3.Added Math.ceil() Snippet
+4.Added Math.floor() Snippet
+5.Added Math.round() Snippet
+6.Added Math.min() Snippet
+7.Added Math.max() Snippet
+
